--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -26,15 +26,16 @@
          <plugin>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>9.3.0.v20150612</version>
+            <version>9.2.5.v20141112</version>
             <configuration>
-               <scanIntervalSeconds>10</scanIntervalSeconds>
+               <stopPort>9999</stopPort>
+               <stopKey>STOP</stopKey>
                <httpConnector>
-                  <port>${jetty.port}</port>
-                  <idleTimeout>60000</idleTimeout>
-               </httpConnector>
-               <stopKey>foo</stopKey>
-               <stopPort>${jetty.stop.port}</stopPort>
+                  <port>9090</port>
+                  </httpConnector>
+               <webApp>
+                  <contextPath>/</contextPath>
+               </webApp>
             </configuration>
             <executions>
                <execution>
